[package]
name = "jlc_pcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
diesel_full_text_search = "2.1.1"
diesel_logger = "0.3.0"
dotenvy = "0.15.7"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
tokio = { version = "1.35.1", features = ["full"] }
